--- a/index.css
+++ b/index.css
@@ -1,3 +1,18 @@
+body {
+    background-color: bisque;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+}
+
+body > p {
+    flex: 1 1 100%;
+}
+body > h1 {
+    flex: 1 1 100%;
+}
+
 .calculator {
     display : flex;
     flex-wrap: wrap;
@@ -13,8 +28,8 @@
     flex: 1 1 100%;
     display : flex;
     align-items: center;
-    justify-content: center;
-    text-align: center;
+    justify-content: flex-end;
+    text-align: right;
     border: 3px solid black;
     background-color: gray; 
     height: 100px;
